Better animation for rick and morty

--- a/demo/index.html
+++ b/demo/index.html
@@ -81,7 +81,7 @@
     }, {
       "rotate": -17,
       "translateX": 478.5,
-      "translateY": 240.5,
+      "translateY": 250.5,
       "duration": 500,
       "minute": 4500
     }, {
@@ -108,204 +108,223 @@
       "duration": 500,
       "minute": 6500
     }, {
-      "translateX": 514.5,
-      "translateY": 293.5,
+      "translateX": 460.5,
+      "translateY": 283.5,
       "duration": 500,
       "minute": 7000
     }, {
-      "translateX": 516.5,
-      "translateY": 301.5,
+      "height": 180,
+      "translateX": 450.5,
+      "translateY": 283.5,
       "duration": 500,
       "minute": 7500
     }, {
-      "translateX": 517.5,
-      "translateY": 292.5,
+      "translateX": 460.5,
+      "translateY": 283.5,
       "duration": 500,
       "minute": 8000
     }, {
-      "translateX": 515.5,
-      "translateY": 253.5,
+      "translateX": 460.5,
+      "translateY": 233.5,
       "duration": 500,
       "minute": 8500
     }, {
-      "translateX": 498.5,
-      "translateY": 223.5,
+      "translateX": 430.5,
+      "translateY": 203.5,
       "duration": 500,
       "minute": 9000
     }, {
-      "translateX": 508.5,
-      "translateY": 227.5,
+      "height": 190,
+      "translateX": 438.5,
+      "translateY": 203.5,
       "duration": 500,
       "minute": 9500
     }, {
-      "translateX": 512.5,
-      "translateY": 244.5,
+      "height": 200,
+      "rotate": -18,
+      "translateX": 418.5,
+      "translateY": 220.5,
       "duration": 500,
       "minute": 10000
     }, {
-      "translateX": 525.5,
-      "translateY": 255.5,
+      "height": 210,
+      "rotate": -13,
+      "translateX": 435,
+      "translateY": 230.5,
       "duration": 500,
       "minute": 10500
     }, {
-      "translateX": 529.5,
-      "translateY": 256.5,
+      "height": 220,
+      "rotate": -14,
+      "translateX": 425,
+      "translateY": 230.5,
       "duration": 500,
       "minute": 11000
     }, {
-      "translateX": 494.5,
-      "translateY": 273.5,
+      "translateX": 385,
+      "translateY": 230.5,
       "duration": 500,
       "minute": 11500
     }, {
-      "translateX": 454.5,
-      "translateY": 280.5,
+      "translateX": 355,
+      "translateY": 230,
       "duration": 500,
       "minute": 12000
     }, {
-      "translateX": 451.5,
-      "translateY": 291.5,
+      "height": 260,
+      "translateX": 315,
+      "translateY": 230,
       "duration": 500,
       "minute": 12500
     }, {
-      "translateX": 428.5,
-      "translateY": 280.5,
+      "rotate": -18,
+      "translateX": 285,
+      "translateY": 230,
       "duration": 500,
       "minute": 13000
     }];
     var mortyFrames = [{
-      "translateX": 599.5,
-      "translateY": 202.5,
+      "height": 100,
+      "translateX": 573,
+      "translateY": 165.5,
       "duration": 0,
       "minute": 0
     }, {
-      "translateX": 590.5,
-      "translateY": 199.5,
+      "translateX": 563,
+      "translateY": 163,
       "duration": 500,
       "minute": 500
     }, {
-      "translateX": 583.5,
-      "translateY": 201.5,
+      "translateX": 553,
+      "translateY": 168,
       "duration": 500,
       "minute": 1000
     }, {
-      "translateX": 602.5,
-      "translateY": 211.5,
+      "translateX": 568,
+      "translateY": 175,
       "duration": 500,
       "minute": 1500
     }, {
-      "translateX": 608.5,
-      "translateY": 201.5,
+      "translateX": 575,
+      "translateY": 163,
       "duration": 500,
       "minute": 2000
     }, {
-      "translateX": 616.5,
-      "translateY": 194.5,
+      "translateX": 586,
+      "translateY": 157,
       "duration": 500,
       "minute": 2500
     }, {
-      "translateX": 619.5,
-      "translateY": 207.5,
+      "translateX": 592,
+      "translateY": 165,
       "duration": 500,
       "minute": 3000
     }, {
-      "translateX": 609.5,
-      "translateY": 219.5,
+      "translateX": 581,
+      "translateY": 188,
       "duration": 500,
       "minute": 3500
     }, {
-      "translateX": 606.5,
-      "translateY": 232.5,
+      "translateX": 574,
+      "translateY": 192,
       "duration": 500,
       "minute": 4000
     }, {
-      "translateX": 609.5,
-      "translateY": 233.5,
+      "translateX": 571,
+      "translateY": 198,
       "duration": 500,
       "minute": 4500
     }, {
-      "translateX": 620.5,
-      "translateY": 234.5,
+      "translateX": 579,
+      "translateY": 192,
       "duration": 500,
       "minute": 5000
     }, {
-      "translateX": 639.5,
-      "translateY": 232.5,
+      "height": 115,
+      "translateX": 596,
+      "translateY": 180,
       "duration": 500,
       "minute": 5500
     }, {
-      "translateX": 645.5,
-      "translateY": 231.5,
+      "translateX": 603,
+      "translateY": 175,
       "duration": 500,
       "minute": 6000
     }, {
-      "translateX": 645.5,
-      "translateY": 253.5,
+      "translateX": 596,
+      "translateY": 201,
       "duration": 500,
       "minute": 6500
     }, {
-      "translateX": 641.5,
-      "translateY": 276.5,
+      "translateX": 592,
+      "translateY": 221,
       "duration": 500,
       "minute": 7000
     }, {
-      "translateX": 639.5,
-      "translateY": 284.5,
+      "height": 125,
+      "translateX": 586,
+      "translateY": 229,
       "duration": 500,
       "minute": 7500
     }, {
-      "translateX": 637.5,
-      "translateY": 277.5,
+      "translateX": 583,
+      "translateY": 220,
       "duration": 500,
       "minute": 8000
     }, {
-      "translateX": 627.5,
-      "translateY": 249.5,
+      "height": 130,
+      "translateX": 564,
+      "translateY": 186,
       "duration": 500,
       "minute": 8500
     }, {
-      "translateX": 608.5,
-      "translateY": 223.5,
+      "height": 140,
+      "translateX": 544,
+      "translateY": 158,
       "duration": 500,
       "minute": 9000
     }, {
-      "translateX": 636.5,
-      "translateY": 228.5,
+      "translateX": 563,
+      "translateY": 156,
       "duration": 500,
       "minute": 9500
     }, {
-      "translateX": 651.5,
-      "translateY": 240.5,
+      "height": 150,
+      "translateX": 570,
+      "translateY": 167,
       "duration": 500,
       "minute": 10000
     }, {
-      "translateX": 687.5,
-      "translateY": 255.5,
+      "height": 160,
+      "translateX": 597,
+      "translateY": 181,
       "duration": 500,
       "minute": 10500
     }, {
-      "translateX": 679.5,
-      "translateY": 255.5,
+      "translateX": 598,
+      "translateY": 171,
       "duration": 500,
       "minute": 11000
     }, {
-      "translateX": 658.5,
-      "translateY": 273.5,
+      "height": 180,
+      "translateX": 571,
+      "translateY": 181,
       "duration": 500,
       "minute": 11500
     }, {
-      "translateX": 629.5,
-      "translateY": 278.5,
+      "translateX": 533,
+      "translateY": 190,
       "duration": 500,
       "minute": 12000
     }, {
-      "translateX": 642.5,
-      "translateY": 293.5,
+      "translateX": 538,
+      "translateY": 200,
       "duration": 500,
       "minute": 12500
     }, {
-      "translateX": 633.5,
-      "translateY": 284.5,
+      "height": 200,
+      "translateX": 526,
+      "translateY": 184,
       "duration": 500,
       "minute": 13000
     }];
@@ -373,10 +392,6 @@
 
     var mortyAnimation = {
       targets: '#morty',
-      height: [{
-        value: 100,
-        duration: 0
-      }, ],
       opacity: [{
           value: 1,
           duration: 13230
@@ -386,13 +401,24 @@
           duration: 0
         }
       ],
+      height: mortyFrames.map(function (point, idx) {
+        var obj = {
+          duration: point.duration || (idx ? 50 : 0)
+        };
+
+        if (point.height) {
+          obj.value = point.height;
+        }
+
+        return obj;
+      }),
       translateX: mortyFrames.map(function (point, idx) {
         var obj = {
           duration: point.duration || (idx ? 50 : 0)
         };
 
         if (point.translateX) {
-          obj.value = point.translateX - (mortyWidth * 1.7);
+          obj.value = point.translateX - 20;
         }
 
         return obj;
@@ -403,7 +429,7 @@
         };
 
         if (point.translateY) {
-          obj.value = point.translateY - (mortyHeight);
+          obj.value = point.translateY - 20;
         }
 
         return obj;
