Fixing movie clip

--- a/demo/index.html
+++ b/demo/index.html
@@ -336,9 +336,21 @@
 
     var rickAnimation = {
       targets: '#rick',
-      opacity: [{
+      opacity: [
+        {
+          value: 0,
+          duration: 0
+        },
+        {
+          duration: 900
+        },
+        {
           value: 1,
-          duration: 13230
+          duration: 0
+        },
+        {
+          value: 1,
+          duration: 12430
         },
         {
           value: 0,
@@ -393,9 +405,21 @@
 
     var mortyAnimation = {
       targets: '#morty',
-      opacity: [{
+      opacity: [
+       {
+          value: 0,
+          duration: 0
+        },
+        {
+          duration: 900
+        },
+        {
           value: 1,
-          duration: 13230
+          duration: 0
+        },
+        {
+          value: 1,
+          duration: 12430
         },
         {
           value: 0,
