Adding all movie scenes

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div id="player_wrapper">
-    <video id="player" src="assets/titanic.mp4" controls></video>
+    <video id="player" src="../scenes/titanic.mp4" controls></video>
     <audio id="sound_player" src="assets/soundtrack.mp3" controls></audio>
 
     <!-- Your Scene -->
