Creating a demos folder

--- a/demos/magnify/index.html
+++ b/demos/magnify/index.html
@@ -7,11 +7,11 @@
 <body>
   <div class="main-wrapper">
     <video class="main-vid">
-      <source src="../scenes/oscar.mp4" type="video/mp4">
+      <source src="../../scenes/oscar.mp4" type="video/mp4">
     </video>
     <div class="big-vid-wrapper">
       <video class="big-vid">
-        <source src="../scenes/oscar.mp4" type="video/mp4">
+        <source src="../../scenes/oscar.mp4" type="video/mp4">
       </video>
       <img  src="http://www.google.com/logos/2011/worldsfair11-hp.png">
     </div>
