--- a/submissions/nadav&nadav/index.html
+++ b/submissions/nadav&nadav/index.html
@@ -18,13 +18,13 @@ limitations under the License.
 <body>
 <div>
   <h1 id="title"></h1><button id="btn">PLAY</button>
-  <img id="image"/>
+  <img id="image">
   <video id="vid" width="320" height="240">
-    <source src="vid2.mp4" type="video/mp4">
+    <source src="vid2.b08909c9.mp4" type="video/mp4">
   </video>
   
 </div>
 </body>
 
-<script src="index.js"></script>
+<script src="demo.b3ef0790.js"></script>
 </html>
